# iapodcast

./: .dockerignore  .gitlab-ci.yml  .justfile  Cargo.toml  Dockerfile  README.md  config.yml
episodes/: prueba_202404.md
public/temporal/: feed.xml  index.html
public/temporal/assets/: style.css
public/temporal/este-es-el-titulo-de-prueba/: index.html
public/temporal/statistics/: index.html
src/: main.rs
src/models/: archive.rs  config.rs  doc.rs  episode.rs  error.rs  feed.rs  mastodon.rs  metadata.rs  mod.rs  mp3metadata.rs  site.rs  telegram.rs  utils.rs
src/models/archive/: archive.rs  audiometadata.rs  doc.rs  iarchive.rs  metadata.rs  mod.rs
src/models/config/: config.rs  configuration.rs  mod.rs  page.rs  podcast.rs  post.rs  site.rs
src/models/publisher/: mastodon.rs  mod.rs  telegram.rs
templates/: analytics.html  contacto.html  default.html  disqus.html  feed.xml  index.html  mastodon.html  meta.html  page.html  post.html  statistics.html  svg-icons.html  telegram.html
